--- a/itemlist.html
+++ b/itemlist.html
@@ -126,10 +126,56 @@ async function loadTools() {
 
   // Call loadTools when the page loads
   window.addEventListener("DOMContentLoaded", loadTools);
-  function itemSpawn() {
+  async function itemSpawn() {
     //Simple check to make sure user input proper values into the card create
     var spawnCondition = document.getElementById("nameInput")
     var spawnCondition2 = document.getElementById("quantityInput")
+    const nameInput = document.getElementById("nameInput").value.trim();
+  const quantityInput = document.getElementById("quantityInput").value.trim();
+
+  if (!nameInput || !quantityInput) {
+    alert("Please fill in all fields.");
+    return;
+  }
+
+  // Only send toolName (not quantity, if backend doesn't support it)
+  const newTool = {
+    toolName: nameInput,
+    quantity: quantityInput
+  };
+
+  try {
+    const response = await fetch("https://develmets.skiscratcher.com/addTool", {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/json"
+      },
+      credentials: "include",
+      body: JSON.stringify(newTool)
+    });
+
+    const responseText = await response.text();
+    console.log("Backend response:", responseText);
+
+    if (response.ok) {
+      console.log("Tool added successfully");
+
+      // Clear form values *after* successful submit
+      document.getElementById("nameInput").value = "";
+      document.getElementById("quantityInput").value = "";
+      document.getElementById("imageInput").value = "";
+      document.getElementById("imagePreview").innerHTML = "";
+
+      closeItemForm();
+      await loadTools(); // Refresh tool list
+    } else {
+      console.error("Failed to add tool:", response.status, responseText);
+      alert("Error adding tool: " + responseText);
+    }
+  } catch (error) {
+    console.error("Error sending tool to backend:", error);
+    alert("Could not connect to the server.");
+  }
 
     if (spawnCondition.value != "" && spawnCondition2.value != "") {
       //Creating a button, div, and text to place onto screen
