--- a/itemlist.html
+++ b/itemlist.html
@@ -127,26 +127,24 @@ async function loadTools() {
   // Call loadTools when the page loads
   window.addEventListener("DOMContentLoaded", loadTools);
   async function itemSpawn() {
-    //Simple check to make sure user input proper values into the card create
-    var spawnCondition = document.getElementById("nameInput")
-    var spawnCondition2 = document.getElementById("quantityInput")
-    const nameInput = document.getElementById("nameInput").value.trim();
-    const quantityInput = document.getElementById("quantityInput").value.trim();
-
-    const fd = new URLSearchParams({ name: nameInput, quantity: quantityInput });
-
-
+  const nameInput = document.getElementById("nameInput").value.trim();
+  const quantityInput = document.getElementById("quantityInput").value.trim();
 
   if (!nameInput || !quantityInput) {
     alert("Please fill in all fields.");
     return;
   }
 
-  // Only send toolName (not quantity, if backend doesn't support it)
-  const newTool = {
-    toolName: nameInput,
+  // Make sure quantity is a valid number
+  if (isNaN(quantityInput) || parseInt(quantityInput) < 0) {
+    alert("Quantity must be a non-negative number.");
+    return;
+  }
+
+  const fd = new URLSearchParams({
+    name: nameInput,
     quantity: quantityInput
-  };
+  });
 
   try {
     const response = await fetch("https://develmets.skiscratcher.com/createToolType", {
@@ -155,61 +153,29 @@ async function loadTools() {
       headers: {
         "Content-Type": "application/x-www-form-urlencoded"
       },
-      credentials: "include",
+      credentials: "include"
     });
 
     const responseText = await response.text();
     console.log("Backend response:", responseText);
 
     if (response.ok) {
-      console.log("Tool added successfully");
-
-      // Clear form values *after* successful submit
       document.getElementById("nameInput").value = "";
       document.getElementById("quantityInput").value = "";
       document.getElementById("imageInput").value = "";
       document.getElementById("imagePreview").innerHTML = "";
 
       closeItemForm();
-      await loadTools(); // Refresh tool list
+      await loadTools();
     } else {
-      console.error("Failed to add tool:", response.status, responseText);
       alert("Error adding tool: " + responseText);
     }
   } catch (error) {
-    console.error("Error sending tool to backend:", error);
+    console.error("Network or server error:", error);
     alert("Could not connect to the server.");
   }
+}
 
-    if (spawnCondition.value != "" && spawnCondition2.value != "") {
-      //Creating a button, div, and text to place onto screen
-      var cardBtn = document.createElement("Button");
-      const cardBorder = document.createElement("div");
-      const innerCardText = document.createElement("p");
-
-      //Giving border a class for styling purposes
-      cardBorder.classList.add("border");
-      //Placing card into the grid-container in the HTMLs body
-      document.getElementsByClassName("grid-container")[0].appendChild(cardBtn);
-
-      //Inputting the name typed in and putting it into the text
-      innerCardText.innerText = document.getElementById('nameInput').value + " Amount: " + document.getElementById("quantityInput").value; 
-      //Inserting the text into the card
-      cardBorder.appendChild(innerCardText);
-
-      //Setting buttons class to grid-item for styling
-      cardBtn.setAttribute("class", "grid-item");
-      //Inserting the border into the card
-      cardBtn.appendChild(cardBorder);
-
-      //Setting all previous values the user typed into as blank to prepare for next card creation
-      spawnCondition.value = "";
-      document.getElementById("nameInput").value = spawnCondition.value;
-      document.getElementById("quantityInput").value = spawnCondition.value;
-      document.getElementById("imageInput").value = spawnCondition.value;
-      document.getElementById('imagePreview').innerHTML = '';
-    }
-  }
 
 
   function openItemForm() {
