--- a/login.html
+++ b/login.html
@@ -7,7 +7,9 @@
   <link rel="icon" type="image/x-icon" href="images/Logo.png">
 </head>
 <body>
-  <img src="images/Logo.png"  id="mainLogo" alt="KTI" width="350">
+  <div id="logoBox">
+    <img src="images/Logo.png"  id="mainLogo" alt="KTI" width="350">
+  </div>
   <div class="loginBox">
     <form id="loginForm" method="post">
       <div class="spacing">
