--- a/login.html
+++ b/login.html
@@ -1,68 +1,61 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Login</title>
-  <link href="loginpage.css" rel="stylesheet" type="text/css"/>
-  <link rel="icon" type="image/x-icon" href="images/Logo.png">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Login - Metals Storage</title>
+  <link rel="stylesheet" href="loginpage.css" />
+  <link rel="icon" type="image/x-icon" href="images/Logo.png" />
 </head>
 <body>
-  <div id="logoBox">
-    <img src="images/Logo.png"  id="mainLogo" alt="KTI" width="350">
-  </div>
-  <div class="loginBox">
-    <form id="loginForm" method="post">
-      <div class="spacing">
-        <h5>Email: </h5>
-        <input class="grey" type="email" id="email" name="email" required placeholder="Username"><br><br>
-        <h5>Password: </h5>
-        <input class="grey" type="password" id="myInput" name="password"
-          placeholder="Password"
-          pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
-          title="Must contain at least one number, one uppercase and lowercase letter, and at least 8 or more characters"
-          required><br><br>
-        <p class="show">
-          <input type="checkbox" onclick="document.getElementById('myInput').type = this.checked ? 'text' : 'password'">
-          <b>Show Password</b>
-        </p>
-      </div>
+  <div class="container">
+    <div class="logo">
+      <img src="images/Logo.png" alt="Metals Storage Logo" />
+      <h1>METALS <span>STORAGE</span></h1>
+    </div>
 
-      <div id="message">
-        <p id="letter" class="invalid">A <b>lowercase</b> letter</p>
-        <p id="capital" class="invalid">A <b>capital (uppercase)</b> letter</p>
-        <p id="number" class="invalid">A <b>number</b></p>
-        <p id="length" class="invalid">Minimum <b>8 characters</b></p>
-      </div>
+    <div class="login-box">
+      <h2>Login</h2>
+      <form id="loginForm" method="post">
+        <label for="email">Email or Username</label>
+        <input type="email" id="email" name="email" required placeholder="Enter your email or username" />
 
-      <a class="forgot" href="">Forgot password</a>
-      <br><br>
-      <button class="login" type="button" onclick="loginUser()"><b>Login</b></button>
-      <br><br>
-    </form>
+        <label for="myInput">Password</label>
+        <input type="password" id="myInput" name="password" required placeholder="Enter your password" />
+
+        <div class="show-password">
+          <input type="checkbox" onclick="document.getElementById('myInput').type = this.checked ? 'text' : 'password'" />
+          <label>Show Password</label>
+        </div>
+
+        <button type="button" class="login-button" onclick="loginUser()">Login</button>
+
+        <div class="bottom-links">
+          <a href="#">Forgot password?</a><br>
+          <span>Don't have an account? <a href="#">Sign up</a></span>
+        </div>
+      </form>
+    </div>
   </div>
 
   <script>
     window.onload = async function () {
-  
-
-  try {
-    const response = await fetch("https://develmets.skiscratcher.com/logininfo", {
-      method: "GET",
-      credentials: "include"
-    });
-
-    const contentType = response.headers.get("content-type");
-    if (contentType && contentType.includes("application/json")) {
-      const data = await response.json();
-      if (data.loggedIn) {
-        window.location.href = "itemlist.html";
+      try {
+        const response = await fetch("https://develmets.skiscratcher.com/logininfo", {
+          method: "GET",
+          credentials: "include"
+        });
+        const contentType = response.headers.get("content-type");
+        if (contentType && contentType.includes("application/json")) {
+          const data = await response.json();
+          if (data.loggedIn) {
+            window.location.href = "itemlist.html";
+          }
+        }
+      } catch (error) {
+        console.error("Session check failed", error);
       }
-    }
-  } catch (error) {
-    console.error("Session check failed", error);
-  }
-};
-
+    };
 
     async function loginUser() {
       const email = document.getElementById("email").value;
@@ -89,8 +82,6 @@
         }
 
         const json = await response.json();
-        console.log("Login response:", json);
-
         if (json.login === true) {
           window.location.href = "itemlist.html";
         } else {
@@ -101,7 +92,6 @@
         alert("Login request failed.");
       }
     }
-
   </script>
 </body>
 </html>
