--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <div class="logo">
-      <img src="images/Logo.png" alt="Metals Storage Logo" />
+      <img src="images/newlogo.png" alt="Metals Storage Logo" />
       <h1>METALS</h1>
     </div>
 
