--- a/itemlist.html
+++ b/itemlist.html
@@ -66,22 +66,14 @@
 
   <button class="tool-button buttonOrange" onclick="openItemForm()">+</button>
   <div class="tool-popup" id="myItemForm">
-    <form class="tool-container">
-      <h1>New Tool</h1>
-
-      <label for="toolname"><b>Tool Name</b></label>
-      <input type="text" placeholder="Enter Tool Name" name="name" id="nameInput">
-
-      <label for="quantity"><b>Quantity</b></label>
-      <input type="text" placeholder="Enter Quantity" name="quantity" id="quantityInput">
-
-      <label for="myfile"><b>Image</b></label>
-      <input type="file" id="imageInput" onchange="return fileValidation()">
-
-      <div id="imagePreview"></div>
-
-      <button type="button" class="btn" onclick="itemSpawn()">Create Tool</button> 
-      <button type="button" class="btn cancel" onclick="closeItemForm()">Cancel</button>
+    <form class="tool-container" id="toolForm">
+      <!-- Example fields, update as needed -->
+      <label for="nameInput">Tool Name</label>
+      <input type="text" id="nameInput" name="nameInput" required>
+      <label for="quantityInput">Quantity</label>
+      <input type="number" id="quantityInput" name="quantityInput" required min="0">
+      <button type="button" onclick="itemSpawn()">Add Tool</button>
+      <button type="button" onclick="closeItemForm()" style="background:#b71c1c;margin-top:0;">Cancel</button>
     </form>
   </div>
 
@@ -214,10 +206,10 @@ async function loadTools() {
 
 
   function openItemForm() {
-    document.getElementById("myItemForm").style.display = "block";
+    document.getElementById("myItemForm").classList.add("active");
   }
   function closeItemForm() {
-    document.getElementById("myItemForm").style.display = "none";
+    document.getElementById("myItemForm").classList.remove("active");
   }
   
 
