--- a/class.html
+++ b/class.html
@@ -95,6 +95,14 @@
 
       <div>
         <h3>Students to Add</h3>
+        <div id="addStudents">
+          <label for="sName">Student Name</label><br>
+          <input type="text" id="sName" name="sName" placeholder="Enter student name"><br>
+          <label for="sEmail">Student Email</label><br>
+          <input type="text" id="sEmail" name="sEmail" placeholder="Enter student email"><br>
+          <label for="sClass">Class</label><br>
+          <input type="text" id="sClass" name="sClass" placeholder="Enter class name"><br>
+          <button onclick="testAddStudent()">Add Student</button>
         <table id="stdTable">
           <tr>
             <th>Student Name</th>
