--- a/itemlist.html
+++ b/itemlist.html
@@ -112,15 +112,17 @@ async function loadTools() {
         // Add Remove button inside the border
         RemoveBtn.innerText = "Remove";
         RemoveBtn.classList.add("remove-btn");
+        RemoveBtn.dataset.toolId = tool.toolID; // Attach tool ID to button
+
         RemoveBtn.onclick = async function(e) {
           e.stopPropagation();
           e.preventDefault();
           if (confirm(`Are you sure you want to remove ${tool.toolName}?`)) {
             try {
               const fd = new URLSearchParams({
-                name: tool.toolName
+                id: RemoveBtn.dataset.toolId // Use tool ID for removal
               });
-              const response = await fetch("https://develmets.skiscratcher.com/deleteToolType", {
+              const response = await fetch("https://develmets.skiscratcher.com/removeToolType", {
                 method: "POST",
                 body: fd,
                 headers: {
@@ -139,7 +141,6 @@ async function loadTools() {
             }
           }
         };
-        
 
         cardBtn.appendChild(cardBorder);
         container.appendChild(cardBtn);
