--- a/itemlist.html
+++ b/itemlist.html
@@ -122,7 +122,7 @@ async function loadTools() {
               const fd = new URLSearchParams({
                 id: RemoveBtn.dataset.toolId // Use tool ID for removal
               });
-              const response = await fetch("https://develmets.skiscratcher.com/removeToolType", {
+              const response = await fetch("https://develmets.skiscratcher.com/removeToolType?=id", {
                 method: "POST",
                 body: fd,
                 headers: {
