--- a/itemlist.html
+++ b/itemlist.html
@@ -114,34 +114,36 @@ async function loadTools() {
         RemoveBtn.classList.add("remove-btn");
         RemoveBtn.dataset.toolTypeId = tool.toolTypeID; // Attach tool ID to button
 
-        RemoveBtn.onclick = async function(e) {
-          e.stopPropagation();
-          e.preventDefault();
-          if (confirm(`Are you sure you want to remove ${tool.toolName}?`)) {
-            try {
-              const fd = new URLSearchParams({
-                id: RemoveBtn.dataset.toolTypeId // Use tool ID for removal
-              });
-              const toolId = RemoveBtn.dataset.toolId;
-              const response = await fetch(`https://develmets.skiscratcher.com/removeToolType?id=${toolId}`, {
-                method: "POST",
-                body: fd,
-                headers: {
-                  "Content-Type": "application/x-www-form-urlencoded"
-                },
-                credentials: "include"
-              });
-              if (response.ok) {
-                await loadTools();
+        RemoveBtn.onclick = async function (e) {
+        e.stopPropagation();
+        e.preventDefault();
+
+        if (confirm(`Are you sure you want to remove ${tool.toolName}?`)) {
+          try {
+            const toolId = RemoveBtn.dataset.toolId;
+
+            const response = await fetch(`https://develmets.skiscratcher.com/removeToolType?id=${toolId}`, {
+              method: "DELETE",
+              credentials: "include"
+            });
+
+            if (response.ok) {
+              const result = await response.json();
+              if (result.success) {
+                await loadTools(); // refresh the list
               } else {
-                const text = await response.text();
-                alert("Failed to remove tool: " + text);
+                alert("Failed to remove tool: " + result.msg);
               }
-            } catch (err) {
-              alert("Error removing tool: " + err);
+            } else {
+              const text = await response.text();
+              alert("Failed to remove tool: " + text);
             }
+          } catch (err) {
+            alert("Error removing tool: " + err);
           }
-        };
+        }
+      };
+
 
         cardBtn.appendChild(cardBorder);
         container.appendChild(cardBtn);
