--- a/itemlist.html
+++ b/itemlist.html
@@ -123,7 +123,7 @@ async function loadTools() {
             const toolId = RemoveBtn.dataset.toolId;
 
             const response = await fetch(`https://develmets.skiscratcher.com/removeToolType?id=${toolId}`, {
-              method: "DELETE",
+              method: "GET",
               credentials: "include"
             });
 
