--- a/itemlist.html
+++ b/itemlist.html
@@ -112,6 +112,7 @@ async function loadTools() {
         // Add Remove button inside the border
         RemoveBtn.innerText = "Remove";
         RemoveBtn.classList.add("remove-btn");
+        console.log(tool);
         RemoveBtn.dataset.toolTypeId = tool.toolTypeID; // Attach tool ID to button
 
         RemoveBtn.onclick = async function (e) {
@@ -120,12 +121,11 @@ async function loadTools() {
 
         if (confirm(`Are you sure you want to remove ${tool.toolName}?`)) {
           try {
-            const toolId = RemoveBtn.dataset.toolId;
-
-            const response = await fetch(`https://develmets.skiscratcher.com/removeToolType?id=${toolId}`, {
-              method: "GET",
-              credentials: "include"
-            });
+            var toolTypeId = RemoveBtn.dataset.toolTypeId;
+            const response = await fetch(`https://develmets.skiscratcher.com/removeToolType?id=${toolTypeId}`, {
+            method: "DELETE",
+            credentials: "include"
+          });
 
             if (response.ok) {
               const result = await response.json();
