--- a/itemlist.html
+++ b/itemlist.html
@@ -124,6 +124,7 @@ async function loadTools() {
             var toolTypeId = RemoveBtn.dataset.toolTypeId;
             const response = await fetch(`https://develmets.skiscratcher.com/removeToolType?id=${toolTypeId}`, {
             method: "DELETE",
+            //jimmy
             credentials: "include"
           });
 
