--- a/itemlist.html
+++ b/itemlist.html
@@ -122,6 +122,7 @@ async function loadTools() {
         if (confirm(`Are you sure you want to remove ${tool.toolName}?`)) {
           try {
             var toolTypeId = RemoveBtn.dataset.toolTypeId;
+            console.log(toolTypeId);
             const response = await fetch(`https://develmets.skiscratcher.com/removeToolType?id=${toolTypeId}`, {
             method: "DELETE",
             //jimmy
