--- a/class.html
+++ b/class.html
@@ -14,10 +14,26 @@
   </head>
     <!--jimmy-->
   <body>
-    <header style="background:#d32f2f; color:#fff; padding:18px 0 10px 0; text-align:center; box-shadow:0 2px 10px rgba(211,47,47,0.08);">
-      <img src="images/Logo.png" alt="Logo" style="height:48px; vertical-align:middle; margin-right:16px;">
-      <span style="font-size:2em; font-family:'Oswald',Arial,sans-serif; font-weight:700; letter-spacing:2px;">Class Management Dashboard</span>
-    </header>
+    <nav>
+    <!--KTI Logo and Title-->
+    <p class="navMainText">
+      <img id="navImage" src="Images/newlogo.png" width="100" alt="drawing of a welder">
+      Keefe Tech Inventory
+    </p>
+
+    <br>
+
+    <!--Navigation Bar-->
+    <div class="topnav" id="myTopnav">
+      <a href="../keefeTechInv/itemlist.html"><b><i>Items</a></b></i>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+      </a>
+      <!--Profile Button-->
+      <button class="open-button" onclick="openForm()">Profile</button>
+    </div>
+      
+  </nav>
 
     <main style="margin-top:32px;">
       <div id="addClass">
