--- a/class.html
+++ b/class.html
@@ -18,7 +18,7 @@
     <!--KTI Logo and Title-->
     <p class="navMainText">
       <img id="navImage" src="Images/newlogo.png" width="100" alt="drawing of a welder">
-      Keefe Tech Inventory
+      Keefe Tech Inventory - classes
     </p>
 
     <br>
