--- a/itemlist.html
+++ b/itemlist.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>Itemslist</title>
   <link href="itemstyle.css" rel="stylesheet" type="text/css"/>
-  <link rel="icon" type="image/x-icon" href=Images/newlogo.png>">
+  <link rel="icon" type="image/x-icon" href="Images/newlogo.png>">
 
   <!--Google Fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
