--- a/itemlist.html
+++ b/itemlist.html
@@ -158,22 +158,15 @@ async function loadTools() {
   window.addEventListener("DOMContentLoaded", loadTools);
   async function itemSpawn() {
   const nameInput = document.getElementById("nameInput").value.trim();
-  const quantityInput = document.getElementById("quantityInput").value.trim();
 
-  if (!nameInput || !quantityInput) {
+  if (!nameInput) {
     alert("Please fill in all fields.");
     return;
   }
 
-  // Make sure quantity is a valid number
-  if (isNaN(quantityInput) || parseInt(quantityInput) < 0) {
-    alert("Quantity must be a non-negative number.");
-    return;
-  }
 
   const fd = new URLSearchParams({
     name: nameInput,
-    quantity: quantityInput
   });
 
   try {
