--- a/class.html
+++ b/class.html
@@ -147,7 +147,10 @@
     return;
   }
   try {
-    const response = await fetch("https://develmets.skiscratcher.com/users");
+    const response = await fetch("https://develmets.skiscratcher.com/users", {
+      method: "GET",
+      credentials: "include"
+    });
     if (!response.ok) {
       alert("Failed to fetch users.");
       return;
