--- a/class.html
+++ b/class.html
@@ -41,14 +41,10 @@
       </div>
 
       <div id="addStudents" style="margin-top:32px;">
-        <h3>Add Student</h3>
-        <label for="sName">Student Name</label><br>
-        <input type="text" id="sName" name="sName" placeholder="Enter student name"><br>
-        <label for="sEmail">Student Email</label><br>
-        <input type="text" id="sEmail" name="sEmail" placeholder="Enter student email"><br>
+        <h3>Add Student to Class</h3>
         <label for="sClass">Class</label><br>
         <select id="sClass" name="sClass"></select><br>
-        <button onclick="addStudent()">Add Student</button>
+        <div id="userList" style="margin-top:18px;"></div>
       </div>
       <!-- Add All Users button -->
       <button id="addAllUsersBtn" style="margin-top:18px;">Add All Users to Selected Class</button>
@@ -110,6 +106,7 @@
     });
     updateClassDropdown();
     renderClassrooms();
+    renderUserList(); // <-- Add this line
   } catch (err) {
     alert("Error fetching classes: " + err);
   }
@@ -171,10 +168,62 @@
         });
       }
 
-      // Initialize dropdown on page load
-      window.addEventListener("DOMContentLoaded", fetchAndRenderClasses);
+      // Fetch users and display them with add buttons
+async function renderUserList() {
+  const userListDiv = document.getElementById("userList");
+  userListDiv.innerHTML = "<b>Loading users...</b>";
+  try {
+    const response = await fetch("https://develmets.skiscratcher.com/users", {
+      method: "GET",
+      credentials: "include"
+    });
+    if (!response.ok) {
+      userListDiv.innerHTML = "<b>Failed to fetch users.</b>";
+      return;
+    }
+    const users = await response.json();
+    // Filter out admins (assuming user.role or user.isAdmin)
+    const filtered = users.filter(user => !user.isAdmin && user.role !== "admin");
+    if (filtered.length === 0) {
+      userListDiv.innerHTML = "<b>No students found.</b>";
+      return;
+    }
+    userListDiv.innerHTML = "";
+    filtered.forEach(user => {
+      const row = document.createElement("div");
+      row.style.display = "flex";
+      row.style.alignItems = "center";
+      row.style.marginBottom = "8px";
+      // Add button
+      const addBtn = document.createElement("button");
+      addBtn.textContent = "+";
+      addBtn.style.marginRight = "12px";
+      addBtn.onclick = function() {
+        const sClass = document.getElementById("sClass").value;
+        if (!sClass) {
+          alert("Please select a class first.");
+          return;
+        }
+        // Add student to class
+        studentsByClass[sClass].push({ name: user.name, email: user.email });
+        renderClassrooms();
+      };
+      row.appendChild(addBtn);
+      // Student info
+      const info = document.createElement("span");
+      info.textContent = `${user.name} (${user.email})`;
+      row.appendChild(info);
+      userListDiv.appendChild(row);
+    });
+  } catch (err) {
+    userListDiv.innerHTML = "<b>Error loading users.</b>";
+  }
+}
 
-      document.getElementById("addAllUsersBtn").onclick = async function() {
+// Initialize dropdown on page load
+window.addEventListener("DOMContentLoaded", fetchAndRenderClasses);
+
+document.getElementById("addAllUsersBtn").onclick = async function() {
   const sClass = document.getElementById("sClass").value;
   if (!sClass) {
     alert("Please select a class first.");
@@ -202,6 +251,11 @@
     alert("Error fetching users: " + err);
   }
 };
+
+// Also call renderUserList when the class dropdown changes
+document.getElementById("sClass").addEventListener("change", renderUserList);
+
+// On page load, users will be rendered after classes are loaded
     </script>
   </body>
 </html>
