--- a/class.html
+++ b/class.html
@@ -46,8 +46,6 @@
         <select id="sClass" name="sClass"></select><br>
         <div id="userList" style="margin-top:18px;"></div>
       </div>
-      <!-- Add All Users button -->
-      <button id="addAllUsersBtn" style="margin-top:18px;">Add All Users to Selected Class</button>
 
       <div style="margin-top:40px;">
         <h3>Classrooms & Students</h3>
@@ -59,8 +57,12 @@
       // Store classes and students in memory
       const classes = [];
       const studentsByClass = {};
+      const StudentId = [];
 
-      // Add a new class
+      // Store students that have already been assigned to a class
+const assignedStudentIds = new Set();
+
+// Add a new class
       async function addClass() {
   const cName = document.getElementById("cName").value.trim();
   if (!cName) {
@@ -101,25 +103,26 @@
     // Update local classes and studentsByClass
     classes.length = 0;
     classList.forEach(cls => {
-      classes.push(cls.className);
-      if (!studentsByClass[cls.className]) studentsByClass[cls.className] = [];
+      classes.push({ className: cls.className, id: cls.id });
+      if (!studentsByClass[cls.id]) studentsByClass[cls.id] = [];
     });
     updateClassDropdown();
+    await fetchAssignedStudents();
     renderClassrooms();
-    renderUserList(); // <-- Add this line
+    renderUserList();
   } catch (err) {
     alert("Error fetching classes: " + err);
   }
 }
 
-      // Update the class dropdown in the Add Student form
+// Update the class dropdown in the Add Student form
       function updateClassDropdown() {
         const sClassSelect = document.getElementById("sClass");
         sClassSelect.innerHTML = "";
         classes.forEach(cls => {
           const option = document.createElement("option");
-          option.value = cls;
-          option.textContent = cls;
+          option.value = cls.className;
+          option.textContent = cls.className;
           sClassSelect.appendChild(option);
         });
       }
@@ -139,36 +142,52 @@
         renderClassrooms();
       }
 
-      // Render all classrooms and their students
-      function renderClassrooms() {
-        const container = document.getElementById("classrooms");
-        container.innerHTML = "";
-        classes.forEach(cls => {
-          const classDiv = document.createElement("div");
-          classDiv.className = "classroom-block";
-          classDiv.style.marginBottom = "32px";
-          classDiv.innerHTML = `<h4 style="color:#d32f2f;">${cls}</h4>`;
-          const table = document.createElement("table");
-          table.className = "classTable";
-          table.style.width = "100%";
-          table.innerHTML = `
-            <tr>
-              <th>Student Name</th>
-              <th>Email</th>
-              <th>Checked Out Tools</th>
-            </tr>
-          `;
-          studentsByClass[cls].forEach(student => {
-            const row = document.createElement("tr");
-            row.innerHTML = `<td>${student.name}</td><td>${student.email}</td>`;
-            table.appendChild(row);
-          });
-          classDiv.appendChild(table);
-          container.appendChild(classDiv);
-        });
-      }
+// Add student to class and persist to backend
+async function addStudentToClass(user, classId) {
+  // POST to backend to assign student to class
+  try {
+    const response = await fetch("https://develmets.skiscratcher.com/assignStudentToClass", {
+      method: "POST",
+      headers: { "Content-Type": "application/x-www-form-urlencoded" },
+      body: new URLSearchParams({ studentId: user.id, classId: classId }),
+      credentials: "include"
+    });
+    if (!response.ok) {
+      alert("Failed to assign student to class.");
+      return;
+    }
+    // Mark student as assigned
+    assignedStudentIds.add(user.id);
+    // Add to local classroom list
+    if (!studentsByClass[classId]) studentsByClass[classId] = [];
+    studentsByClass[classId].push({ name: user.displayName, email: user.email, id: user.id });
+    renderClassrooms();
+    renderUserList();
+  } catch (err) {
+    alert("Error assigning student: " + err);
+  }
+}
 
-      // Fetch users and display them with add buttons
+// Fetch assigned students for each class from backend
+async function fetchAssignedStudents() {
+  try {
+    const response = await fetch("https://develmets.skiscratcher.com/users", {
+      method: "GET",
+      credentials: "include"
+    });
+    if (!response.ok) return;
+    const assigned = await response.json();
+    assigned.forEach(item => {
+      assignedStudentIds.add(item.studentId);
+      if (!studentsByClass[item.classId]) studentsByClass[item.classId] = [];
+      studentsByClass[item.classId].push({ name: item.displayName, email: item.email, id: item.studentId });
+    });
+  } catch (err) {
+    // Ignore errors for now
+  }
+}
+
+// Fetch users and display them with add buttons (excluding already assigned students)
 async function renderUserList() {
   const userListDiv = document.getElementById("userList");
   userListDiv.innerHTML = "<b>Loading users...</b>";
@@ -182,10 +201,10 @@ async function renderUserList() {
       return;
     }
     const users = await response.json();
-    // Filter out admins (assuming user.role or user.isAdmin)
-    const filtered = users.filter(user => user.userType == 1);
+    // Filter out admins and already assigned students
+    const filtered = users.filter(user => user.userType == 1 && !assignedStudentIds.has(user.id));
     if (filtered.length === 0) {
-      userListDiv.innerHTML = "<b>No students found.</b>";
+      userListDiv.innerHTML = "<b>No students available to add.</b>";
       return;
     }
     userListDiv.innerHTML = "";
@@ -200,13 +219,12 @@ async function renderUserList() {
       addBtn.style.marginRight = "12px";
       addBtn.onclick = function() {
         const sClass = document.getElementById("sClass").value;
-        if (!sClass) {
+        const classObj = classes.find(cls => cls.className === sClass);
+        if (!classObj) {
           alert("Please select a class first.");
           return;
         }
-        // Add student to class
-        studentsByClass[sClass].push({ name: user.displayName, email: user.email });
-        renderClassrooms();
+        addStudentToClass(user, classObj.id);
       };
       row.appendChild(addBtn);
       // Student info
@@ -220,42 +238,40 @@ async function renderUserList() {
   }
 }
 
-// Initialize dropdown on page load
-window.addEventListener("DOMContentLoaded", fetchAndRenderClasses);
+// Render all classrooms and their students
+function renderClassrooms() {
+  const container = document.getElementById("classrooms");
+  container.innerHTML = "";
+  classes.forEach(cls => {
+    const classDiv = document.createElement("div");
+    classDiv.className = "classroom-block";
+    classDiv.style.marginBottom = "32px";
+    classDiv.innerHTML = `<h4 style="color:#d32f2f;">${cls.className}</h4>`;
+    const table = document.createElement("table");
+    table.className = "classTable";
+    table.style.width = "100%";
+    table.innerHTML = `
+      <tr>
+        <th>Student Name</th>
+        <th>Email</th>
+        <th>Checked Out Tools</th>
+      </tr>
+    `;
+    (studentsByClass[cls.id] || []).forEach(student => {
+      const row = document.createElement("tr");
+      row.innerHTML = `<td>${student.name}</td><td>${student.email}</td><td></td>`;
+      table.appendChild(row);
+    });
+    classDiv.appendChild(table);
+    container.appendChild(classDiv);
+  });
+}
 
-document.getElementById("addAllUsersBtn").onclick = async function() {
-  const sClass = document.getElementById("sClass").value;
-  if (!sClass) {
-    alert("Please select a class first.");
-    return;
-  }
-  try {
-    const response = await fetch("https://develmets.skiscratcher.com/users", {
-      method: "GET",
-      credentials: "include"
-    });
-    if (!response.ok) {
-      alert("Failed to fetch users.");
-      return;
-    }
-    const users = await response.json();
-    // Assuming users is an array of objects with 'name' and 'email'
-    users.forEach(user => {
-      // Only add if both name and email exist
-      if (user.name && user.email) {
-        addStudent(sClass, user.name + "-" + user.email + "-" + Date.now(), user.email, user.name, 0);
-      }
-    });
-    renderClassrooms && renderClassrooms(); // If using the simpler dashboard version
-  } catch (err) {
-    alert("Error fetching users: " + err);
-  }
-};
+// Initialize dropdown and fetch classes/students on page load
+window.addEventListener("DOMContentLoaded", fetchAndRenderClasses);
 
 // Also call renderUserList when the class dropdown changes
 document.getElementById("sClass").addEventListener("change", renderUserList);
-
-// On page load, users will be rendered after classes are loaded
     </script>
   </body>
 </html>
