--- a/class.html
+++ b/class.html
@@ -146,7 +146,7 @@ const assignedStudentIds = new Set();
 async function addStudentToClass(user, classId) {
   // POST to backend to assign student to class
   try {
-    const response = await fetch("https://develmets.skiscratcher.com/assignStudentToClass", {
+    const response = await fetch("https://develmets.skiscratcher.com/getClasses", {
       method: "POST",
       headers: { "Content-Type": "application/x-www-form-urlencoded" },
       body: new URLSearchParams({ studentId: user.id, classId: classId }),
